fix alignment in pre-emptive search to align with suggestions, fixes #26

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -284,8 +284,8 @@ nav menu li svg {
 .suggestion-outer-wrapper {
   height: 165px;
 }
-/*  */
-.preemptive-suggestions,
+/*
+.preemptive-suggestions, */
 .add-item {
   padding: 10px 0;
   background-color: #ffffff;
